# openeo-geotrellis-kubernetes

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  DEV_SETUP.md  README.md  openeo.yaml  openeo_service.yaml
docker/: Dockerfile  Dockerfile.kakadu  batch_job_log4j2.xml  creo_layercatalog.json  cscale_layercatalog.json  layercatalog.json  log4j.properties  log4j2.xml  probav-mep.py  prometheus_config.yaml
docker/AlmaLinux/: Dockerfile.almalinux8.5-openeo  Dockerfile.almalinux8.5-openeo-geotrellis-kube  Dockerfile.almalinux8.5-spark-py  Dockerfile.almalinux8.5-spark-py-openeo  Dockerfile.almalinux8.5-spark-py-openeo-dind  Dockerfile.almalinux9-spark-py-openeo  Dockerfile.centos8-openeo  Dockerfile.creo  Dockerfile.openeo-base  Jenkinsfile.almalinux8.5-openeo  Jenkinsfile.almalinux8.5-openeo-geotrellis-kube  Jenkinsfile.almalinux8.5-spark-py  Jenkinsfile.almalinux8.5-spark-py-openeo  decom.sh  (+11 more)
examples/: geotrellis-batch-sparkoperator.yaml  job-tracker.yaml  run_batch_k8s.md  run_local.md
hpc/: hpc.md  openeo.sh  openeo_batch.sh
kubernetes/: openeo.yaml  openeo_service.yaml
openeo-geopyspark-k8s-custom-processes/: README.md  pyproject.toml
openeo-geopyspark-k8s-custom-processes/src/openeo_geopyspark_k8s_custom_processes/: custom_processes.py  ogk_utils.py
openeo-geopyspark-k8s-custom-processes/src/openeo_geopyspark_k8s_custom_processes/cwl/: dummy_stac.cwl  insar.cwl  scatter-gather-stac.cwl
openeo-geopyspark-k8s-custom-processes/tests/: test_custom_processes.py  test_ogk_utils.py
openeo-k8s-custom-processes/: README.md  custom_processes.py
(+95 files in other folders)
